[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://AppData/Graphics/BGs/16e22651-bc6f-459d-a712-fe644d7489c9.jpg" type="Texture" id=2]
[ext_resource path="res://Prefabs/EntitiesContainer.tscn" type="PackedScene" id=3]
[ext_resource path="res://AppData/Icons/book_open.png" type="Texture" id=4]
[ext_resource path="res://Prefabs/CategoryBar.tscn" type="PackedScene" id=5]
[ext_resource path="res://AppData/Icons/notepad_write.png" type="Texture" id=6]
[ext_resource path="res://AppData/Icons/book_closed.png" type="Texture" id=8]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="AppBg" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="HSplitContainer" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 0.887
margin_bottom = -8.20001
split_offset = 150

[node name="ColorRect" type="ColorRect" parent="HSplitContainer"]
margin_right = 250.0
margin_bottom = 524.0
rect_min_size = Vector2( 100, 0 )
rect_clip_content = true
color = Color( 0, 0, 0, 0.313726 )

[node name="WindowHeader" type="Label" parent="HSplitContainer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 0.0819924
margin_left = 10.0
margin_right = -10.0
margin_bottom = 2.036
text = "Category Heading"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="EntitiesControl" type="ScrollContainer" parent="HSplitContainer/ColorRect"]
anchor_top = 0.086
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -0.064003
margin_right = -10.0

[node name="collectionContainer" parent="HSplitContainer/ColorRect/EntitiesControl" instance=ExtResource( 3 )]
margin_right = 230.0
margin_bottom = 479.0
custom_constants/separation = 15

[node name="Label2" type="Label" parent="HSplitContainer/ColorRect/EntitiesControl/collectionContainer"]
margin_right = 230.0
margin_bottom = 31.0
text = "This will list all entries under the 
specific heading..."
align = 1

[node name="ColorRect2" type="ColorRect" parent="HSplitContainer"]
margin_left = 262.0
margin_right = 1024.0
margin_bottom = 524.0
rect_min_size = Vector2( 730, 100 )
color = Color( 0, 0, 0, 0.313726 )

[node name="EntityControl" type="ScrollContainer" parent="HSplitContainer/ColorRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0

[node name="collectionContainer" parent="HSplitContainer/ColorRect2/EntityControl" instance=ExtResource( 3 )]
margin_right = 742.0
margin_bottom = 514.0

[node name="Label" type="Label" parent="HSplitContainer/ColorRect2/EntityControl/collectionContainer"]
margin_right = 742.0
margin_bottom = 14.0
text = "This will list the currently selected entry's data in the window's outlined format e.g. collection, graph, etc."

[node name="ColorRect3" type="ColorRect" parent="HSplitContainer"]
visible = false
margin_left = 262.0
margin_right = 1024.0
margin_bottom = 524.0
rect_min_size = Vector2( 730, 100 )
color = Color( 0, 0, 0, 0.313726 )

[node name="EntityControl" type="ScrollContainer" parent="HSplitContainer/ColorRect3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0

[node name="Control" type="Control" parent="."]
anchor_top = 0.873333
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="FileOptionsButton" type="MenuButton" parent="Control"]
anchor_right = 0.073
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
hint_tooltip = "Options"
icon = ExtResource( 4 )
flat = false
icon_align = 1
expand_icon = true
items = [ "Save", null, 0, false, false, 0, 0, null, "", false, "Load", null, 0, false, false, 1, 0, null, "", false, "New", null, 0, false, false, 2, 0, null, "", false ]

[node name="AddAttributableButton" type="MenuButton" parent="Control"]
anchor_left = 0.927734
anchor_right = 1.00073
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
hint_tooltip = "Add new field to entry"
disabled = true
icon = ExtResource( 6 )
flat = false
icon_align = 1
expand_icon = true
items = [ "Description", ExtResource( 8 ), 0, false, false, 0, 0, null, "", false ]

[node name="CategoryContainer" type="ScrollContainer" parent="Control"]
anchor_left = 0.0732422
anchor_right = 0.928766
anchor_bottom = 1.0
margin_top = 10.0
margin_right = -0.0560303
margin_bottom = -10.0002
scroll_vertical_enabled = false
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CategoryBar" parent="Control/CategoryContainer" instance=ExtResource( 5 )]
margin_right = 876.0
